# Resilient-Async-Job-Processing-Platform

./: .gitignore  CHANGELOG.md  README.md  loki-values.yaml  test-data-generator.py
.github/workflows/: docker-build.yml
backend/: Dockerfile  alembic.ini  docker-compose.yml  entrypoint.sh  env.txt  main.py  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 332b6465002f_create_jobs_table.py  38348c36b202_phase4_retry_scheduling_fields.py  73f2e42874bc_add_job_type_and_input_metadata.py  c83d02a2515c_add_job_constraints_and_indexes.py  f4457f8e8b3f_add_context_and_remove_user.py
backend/app/: main.py
backend/app/core/: job_factory.py  logging.py  metrics.py  settings.py  storage.py
backend/app/core/enums/: job_event.py  job_status.py  job_type.py
backend/app/core/notifications/: dispatcher.py  events.py
backend/app/core/notifications/providers/: base.py  mailtrap.py
backend/app/db/: base.py  session.py
backend/app/db/models/: __init__.py  job.py
backend/app/models/: job.py
backend/app/processors/: base.py  registry.py  test_job.py
backend/app/processors/csv/: column_stats.py  deduplicate.py  row_count.py
backend/app/processors/json/: canonicalize.py
backend/app/queues/: job_queue.py
backend/app/repositories/: job_repository.py  mappers.py
backend/app/routes/: jobs.py
backend/app/schemas/: job.py
backend/app/workers/: output_store.py  worker.py
docs/: README.md  istio-mtls.md  monitoring.md  plan.md
frontend/: Dockerfile  next.config.ts  package.json  pnpm-lock.yaml
frontend/app/: page.tsx  (+2 more)
helm/: helm-output.yaml
(+80 files in other folders)
