[project]
name = "Resilient-Async-Job-Processing-Platform-backend"
version = "0.1.0"
description = "Backend for Resilient Async Job Processing Platform"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.17.2",
    "boto3>=1.42.34",
    "boto3-stubs>=1.42.34",
    "botocore>=1.42.34",
    "fastapi>=0.127.1",
    "httpx>=0.28.1",
    "psycopg2-binary>=2.9.11",
    "pydantic>=2.12.5",
    "pydantic[email]>=2.12.5",
    "pydantic-settings>=2.12.0",
    "python-dotenv>=1.2.1",
    "redis>=7.1.0",
    "requests>=2.32.5",
    "sqlalchemy>=2.0.45",
    "uvicorn[standard]>=0.40.0",
]
